--- a/index.html
+++ b/index.html
@@ -1,62 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Varshith Interior Solution</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Varshith Interior Solution — Invoice & 3D Preview</title>
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- jsPDF + AutoTable -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+
+  <!-- Three.js + OrbitControls -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
+  <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="Logo" class="logo">
-        <h1>Varshith Interior Solution</h1>
-    </header>
+  <header>
+    <div class="header-left">
+      <img id="logoImg" src="" alt="Logo (upload below)" />
+      <div class="logo-upload">
+        <label class="btn">Upload Logo
+          <input id="logoUpload" type="file" accept="image/*">
+        </label>
+      </div>
+    </div>
 
-    <main>
-        <section class="invoice-section">
-            <h2>Invoice</h2>
-            <button id="addItemBtn">Add Item</button>
-            <table id="invoiceTable">
-                <thead>
-                    <tr>
-                        <th>Item</th>
-                        <th>Material Used</th>
-                        <th>Qty</th>
-                        <th>Amount</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Rows will be added dynamically -->
-                </tbody>
-            </table>
-            <div class="totals">
-                <label>GST (%): <input type="number" id="gstInput" value="18"></label>
-                <div>Total Cost: <span id="totalCost">0.00</span></div>
-                <div>GST: <span id="gstAmount">0.00</span></div>
-                <div>Final Cost: <span id="finalCost">0.00</span></div>
-            </div>
-            <button id="downloadPdfBtn">Download PDF</button>
-            <p class="note">Note: 50% advance, 30% after 50% work, 20% on completion</p>
-        </section>
+    <div class="header-center">
+      <h1>Varshith Interior Solution</h1>
+      <div class="company-sub">NO 39 BRN Ashish Layout, Near Sri Thimmaraya Swami Gudi, Anekal - 562106</div>
+    </div>
 
-        <section class="design-section">
-            <h2>3D Design Generator</h2>
-            <input type="file" id="designUpload" accept="image/*">
-            <button id="generate3DBtn">Generate 3D Design</button>
-            <div id="progressBarContainer">
-                <div id="progressBar"></div>
-            </div>
-            <div id="threeContainer"></div>
-        </section>
-    </main>
+    <div class="header-right">
+      <div>Phone: +91 9916511599</div>
+      <div>Phone: +91 8553608981</div>
+      <div>Email: Varshithinteriorsolutions@gmail.com</div>
+    </div>
+  </header>
 
-    <footer>
-        &copy; 2025 Varshith Interior Solution
-    </footer>
+  <main>
+    <section class="left-col">
+      <h2>Invoice</h2>
 
-    <script src="script.js"></script>
+      <div class="invoice-meta">
+        <input id="clientName" placeholder="Client Name">
+        <input id="invoiceNumber" placeholder="Invoice Number">
+        <input id="invoiceDate" type="date">
+      </div>
+
+      <div class="controls">
+        <button id="addRowBtn">Add Item</button>
+        <button id="clearRowsBtn">Clear All</button>
+        <label>GST % <input id="gstPercent" type="number" value="18" min="0" step="0.1"></label>
+      </div>
+
+      <div class="table-wrap">
+        <table id="invoiceTable" class="invoice-table">
+          <thead>
+            <tr>
+              <th>Item</th>
+              <th>Material Used</th>
+              <th>Qty</th>
+              <th>Unit Price</th>
+              <th>Line Total</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- rows inserted dynamically -->
+          </tbody>
+        </table>
+      </div>
+
+      <div class="summary">
+        <div>Total Cost: <span id="totalCost">0.00</span></div>
+        <div>GST: <span id="gstAmount">0.00</span></div>
+        <div class="final">Final Cost: <span id="finalCost">0.00</span></div>
+      </div>
+
+      <textarea id="note" rows="3">Note: 50% of the quoted amount has to be paid as advance, 30% after completing 50% of work and remaining 20% on completion.</textarea>
+
+      <div class="actions">
+        <button id="generatePDFBtn" class="primary">Download Invoice PDF</button>
+        <button id="exportJsonBtn">Export Invoice (JSON)</button>
+        <input id="importJsonFile" type="file" accept=".json" style="display:none"/>
+        <button id="importJsonBtn">Import Invoice (JSON)</button>
+      </div>
+    </section>
+
+    <section class="right-col">
+      <h2>2D → 3D Designer</h2>
+
+      <div class="uploader">
+        <input id="upload2D" type="file" accept="image/*">
+        <button id="generate3DBtn">Generate 3D Preview</button>
+      </div>
+
+      <div id="progressContainer" class="progress-container" aria-hidden="true" style="display:none;">
+        <div id="progressBar" class="progress-bar"></div>
+      </div>
+
+      <div id="preview3D" class="preview-3d"></div>
+      <div class="preview-note">Upload a 2D image; it will be mapped onto a plane for quick preview (rotate/zoom with mouse). After 3D generation a snapshot will be taken and embedded into the PDF.</div>
+    </section>
+  </main>
+
+  <footer>
+    <div>Address: NO 39 BRN Ashish Layout Near Sri Thimmaraya Swami Gudi Anekal - 562106</div>
+    <div>Phone: +91 9916511599 &amp; +91 8553608981 | Email: Varshithinteriorsolutions@gmail.com</div>
+    <div class="copyright">© 2025 Varshith Interior Solution</div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
