--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <div class="uploader">
         <input id="upload2D" type="file" accept="image/*" multiple>
-        <div class="hint">Select multiple 2D images; each will appear below with a name and Generate 3D button.</div>
+        <div class="hint">Select multiple images; each will appear below with a name and Generate 3D button.</div>
       </div>
 
       <div id="designList" class="design-list"></div>
@@ -99,7 +99,7 @@
       </div>
 
       <div id="preview3D" class="preview-3d"></div>
-      <div class="preview-note">Click "Generate 3D" for any design to preview and capture a snapshot for PDF.</div>
+      <div class="preview-note">Click "Generate 3D" for any design to preview and capture a snapshot (embedded into PDF).</div>
     </section>
   </main>
 
